--- a/estilo.css
+++ b/estilo.css
@@ -132,3 +132,41 @@ h3{
     font-family: var(--fuenteprincipal);
     margin: 1rem;
 }
+/*Graficos*/
+.graficos{
+    min-height: 30rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.graficos--remeras{
+       grid-row: 2/3;
+       grid-column: 1/3;
+       background-image: url(../img/grafico1.jpg);
+}
+.graficos--node{
+    grid-row: 5/6;
+    grid-column: 2/4;
+    background-image: url(../img/grafico2.jpg);
+}
+@media only screen and (max-width: 768px){
+    .graficos--node{
+       grid-column: 1/3;
+       grid-row: 8/9;
+    }
+    .graficos--remeras{
+        grid-column: 1/3;
+        grid-row: 2/3;
+    }
+}
+/*Pagina nosostros*/
+.nosotros{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+
+}
+.nosotros__contenido{
+
+}
+.nosotros__imagen{
+
+}
