--- a/estilo.css
+++ b/estilo.css
@@ -160,13 +160,48 @@ h3{
 }
 /*Pagina nosostros*/
 .nosotros{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-
+       display: grid;
+       grid-template-columns: repeat(2,auto);
+       column-gap: 1rem;
+       margin: 0 2rem;
 }
-.nosotros__contenido{
-
+.nosotros__contenido p {
+     color: var(--primariooscuro);
+     font-family: var(--fuenteprincipal);
 }
 .nosotros__imagen{
+       text-align: center;
+       width: 100vh;
+       padding: 2rem;
+}
+@media (max-width:768px){
+    .nosotros{
+        grid-template-columns: repeat(1,auto);
 
+    }
+    .nosotros__imagen{
+        grid-row: 1/2;
+        width: 100vh;
+        padding: 0;
+    }
+}
+/**iconos de compras**/
+.bloques{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 3rem;
+    text-align: center;
+}
+.bloque__texto{
+    font-family: var(--fuenteprincipal);
+    margin: 0;
+}
+.bloque__titulo{
+   color:var(--naranja);
+   margin: 0;
+}
+@media (max-width:768px){
+    .bloques{
+        grid-template-columns: repeat(2,1fr);
+    }
 }
