--- a/estilo.css
+++ b/estilo.css
@@ -265,4 +265,7 @@ h3{
     .formulario{
         margin: 0;
     }
+    input[type=number]::-webkit-inner-spin-button {
+        opacity: 1
+    }
 }
